# MLSystemDesign

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
designdoc/: designdoc.md  readme.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.scss  App.tsx  index.tsx
frontend/src/components/Chart/: Chart.tsx
frontend/src/components/Diagram/: Diagram.scss  Diagram.tsx
frontend/src/components/Main/: Main.scss  Main.tsx
frontend/src/contexts/: ChartDataContext.tsx
frontend/src/utils/: api.tsx  constants.tsx
notebooks/: ARIMA_model.ipynb  EDA.ipynb  GRU_model.ipynb  SARIMA_model.ipynb  baseline_exp_smoothing.ipynb  grad_boost_model.ipynb
service/api/: app.py  views.py
service/static/: asset-manifest.json  index.html
service/static/static/css/: main.91958151.css  main.91958151.css.map
service/static/static/js/: 495.f6632b1c.chunk.js  495.f6632b1c.chunk.js.map  main.181fc8b8.js  main.181fc8b8.js.map  main.76319e63.js  main.76319e63.js.map  main.7b8f38d5.js  main.7b8f38d5.js.map  main.f4d8a06b.js  main.f4d8a06b.js.map
src/: load_data.py  predict_data.py  predict_data_baseline.py
