[tool.poetry]
name = "mlsystemdesign"
version = "0.1.0"
description = ""
authors = ["Nikita Borisov <nik-everyday@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
yfinance = "^0.2.28"
jupyter = "^1.0.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
datetime = "^5.2"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
