[tool.poetry]
name = "mlsystemdesign"
version = "0.1.0"
description = ""
authors = ["Nikita Borisov <nik-everyday@yandex.ru>", "Evgeny Bakaev <bak.evsha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
yfinance = "^0.2.28"
jupyter = "^1.0.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
datetime = "^5.2"
matplotlib = "^3.8.0"
statsmodels = "^0.14.0"
scipy = "^1.11.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"
tqdm = "^4.66.1"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
catboost = "^1.2.2"
pydantic = "^2.5.1"
prophet = "^1.1.5"
cloudflare = "^2.14.3"
xgboost = "^2.0.2"
pmdarima = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
